Test with Infinispan 9.4 and Java 11